--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@nestjs/core": "^7.1.3",
     "@nestjs/cqrs": "^7.0.0",
     "@nestjs/microservices": "^7.2.0",
-    "@nestjs/mongoose": "^7.0.1",
+    "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/platform-socket.io": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
     "@svtslv/nestjs-ioredis": "^1.0.2",
+    "amqp-connection-manager": "^3.2.0",
+    "amqplib": "^0.5.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "classnames": "^2.2.6",
@@ -55,7 +57,7 @@
     "ioredis": "^4.17.3",
     "lodash.sortby": "^4.7.0",
     "mongodb": "^3.5.9",
-    "mongoose": "^5.9.19",
+    "mongoose": "^5.9.25",
     "nanoid": "^3.1.10",
     "quill-emoji": "^0.1.7",
     "react": "16.13.1",
@@ -90,6 +92,7 @@
     "@types/ioredis": "^4.16.5",
     "@types/jest": "26.0.0",
     "@types/lodash.sortby": "^4.7.6",
+    "@types/mongoose": "^5.7.32",
     "@types/node": "~14.0.13",
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.8",
