--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-router-dom": "5.2.0",
     "react-spinners": "^0.8.3",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
     "socket.io": "^2.3.0",
