--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/platform-socket.io": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
+    "@reduxjs/toolkit": "^1.4.0",
     "@svtslv/nestjs-ioredis": "^1.0.2",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
