--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/platform-express": "^7.1.3",
     "@nestjs/platform-socket.io": "^7.1.3",
     "@nestjs/websockets": "^7.1.3",
+    "@reduxjs/toolkit": "^1.4.0",
     "@svtslv/nestjs-ioredis": "^1.0.2",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -51,7 +52,6 @@
     "grpc": "^1.24.3",
     "html-react-parser": "^0.13.0",
     "identicon.js": "^2.3.3",
-    "immer": "^7.0.1",
     "ioredis": "^4.17.3",
     "lodash.sortby": "^4.7.0",
     "mongodb": "^3.5.9",
